--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - 9701:9701
     environment:
       - SPRING_PROFILES_ACTIVE=instance1
+    networks:
+      demo_net:
+        ipv4_address: 172.28.1.1
 
   demo-instance-2:
     build: .
@@ -19,6 +22,9 @@ services:
       - 9702:9702
     environment:
       - SPRING_PROFILES_ACTIVE=instance2
+    networks:
+      demo_net:
+        ipv4_address: 172.28.1.2
 
   demo-instance-3:
     build: .
@@ -29,3 +35,13 @@ services:
       - 9703:9703
     environment:
       - SPRING_PROFILES_ACTIVE=instance3
+    networks:
+      demo_net:
+        ipv4_address: 172.28.1.3
+
+networks:
+  demo_net:
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.28.0.0/16
