--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,15 @@ services:
     container_name: demo-instance-1
     ports:
       - 8081:8081
+      - 8443:8443
       - 9701:9701
     environment:
       - SPRING_PROFILES_ACTIVE=instance1
     networks:
       demo_net:
         ipv4_address: 172.28.1.1
+    depends_on:
+      - demo-management-center
 
   demo-instance-2:
     build: .
@@ -25,6 +28,8 @@ services:
     networks:
       demo_net:
         ipv4_address: 172.28.1.2
+    depends_on:
+      - demo-management-center
 
   demo-instance-3:
     build: .
@@ -38,6 +43,17 @@ services:
     networks:
       demo_net:
         ipv4_address: 172.28.1.3
+    depends_on:
+      - demo-management-center
+
+  demo-management-center:
+    image: hazelcast/management-center:3.12.5
+    container_name: demo-management-center
+    ports:
+      - 8084:8080
+    networks:
+      demo_net:
+        ipv4_address: 172.28.1.4
 
 networks:
   demo_net:
